--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,8 +68,10 @@ span.text-red {
   margin-left: 6px;
 }
 .logo {
-  color: gray;
+  color: black;
   font-size: 18px;
+  font-weight: bolder;
+  text-transform: uppercase;
 }
 .cart-icon {
   font-size: 25px;
@@ -88,7 +90,7 @@ span.text-red {
   right: -8px;
   font-size: 12px;
   color: #eee;
-  background-color: #f02d34;
+  background-color: #095a01;
   width: 18px;
   height: 18px;
   border-radius: 50%;
@@ -113,7 +115,6 @@ span.text-red {
   transform: scale(1.1, 1.1);
 }
 .product-image {
-  border-radius: 15px;
   background-color: #ebebeb;
   transform: scale(1, 1);
   transition: transform 0.5s ease;
@@ -130,8 +131,7 @@ span.text-red {
 
 .hero-banner-container {
   padding: 100px 40px;
-  background-color: #dcdcdc;
-  border-radius: 15px;
+  background-color: #f2f2f2;
   position: relative;
   height: 500px;
   line-height: 0.9;
@@ -141,9 +141,8 @@ span.text-red {
   font-size: 20px;
 }
 .hero-banner-container button {
-  border-radius: 15px;
-  padding: 10px 16px;
-  background-color: #f02d34;
+  padding: 10px 25px;
+  background-color: #095a01;
   color: white;
   border: none;
   margin-top: 40px;
@@ -208,8 +207,7 @@ span.text-red {
 }
 .footer-banner-container {
   padding: 100px 40px;
-  background-color: #f02d34;
-  border-radius: 15px;
+  background-color: #095a01;
   position: relative;
   height: 400px;
   line-height: 1;
@@ -225,7 +223,7 @@ span.text-red {
   border-radius: 15px;
   padding: 10px 16px;
   background-color: white;
-  color: red;
+  color: #095a01;
   border: none;
   margin-top: 40px;
   font-size: 18px;
@@ -314,7 +312,7 @@ span.text-red {
 }
 .cart-num-items {
   margin-left: 10px;
-  color: #f02d34;
+  color: #095a01;
 }
 .empty-cart {
   margin: 40px;
@@ -389,13 +387,12 @@ span.text-red {
   width: 100%;
   max-width: 400px;
   padding: 10px 12px;
-  border-radius: 15px;
   border: none;
   font-size: 20px;
   margin-top: 10px;
   margin-top: 40px;
   text-transform: uppercase;
-  background-color: #f02d34;
+  background-color: #095a01;
   color: #fff;
   cursor: pointer;
   transform: scale(1, 1);
@@ -422,7 +419,7 @@ span.text-red {
   transition: 0.3s ease-in-out;
 }
 .product-detail-image:hover {
-  background-color: #f02d34;
+  background-color: #095a01;
 }
 .small-images-container {
   display: flex;
@@ -438,10 +435,10 @@ span.text-red {
 }
 
 .selected-image {
-  background-color: #f02d34;
+  background-color: #095a01;
 }
 .reviews {
-  color: #f02d34;
+  color: #095a01;
   margin-top: 10px;
   display: flex;
   gap: 5px;
@@ -462,7 +459,7 @@ span.text-red {
   font-weight: 700;
   font-size: 26px;
   margin-top: 30px;
-  color: #f02d34;
+  color: #095a01;
 }
 .price .old-price,
 .product-price .old-price,
@@ -482,12 +479,12 @@ span.text-red {
 }
 .buttons .add-to-cart {
   padding: 10px 20px;
-  border: 1px solid #f02d34;
+  border: 1px solid #095a01;
   margin-top: 40px;
   font-size: 18px;
   font-weight: 500;
   background-color: white;
-  color: #f02d34;
+  color: #095a01;
   cursor: pointer;
   width: 200px;
   transform: scale(1, 1);
@@ -500,7 +497,7 @@ span.text-red {
   width: 200px;
 
   padding: 10px 20px;
-  background-color: #f02d34;
+  background-color: #095a01;
   color: white;
   border: none;
   margin-top: 40px;
@@ -552,7 +549,7 @@ span.text-red {
 }
 .max-qty {
   font-weight: 500;
-  color: #f02d34;
+  color: #095a01;
 }
 .success-wrapper,
 .cancel-wrapper {
